--- a/trunk/gm_stringtables/gm_stringtables/gm_stringtables.vcxproj
+++ b/trunk/gm_stringtables/gm_stringtables/gm_stringtables.vcxproj
@@ -75,7 +75,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\..\..\SourceSDK\gmod\CStateManager\CStateManager.cpp" />
-    <ClCompile Include="..\..\..\..\Jake%27s Stuff\GModModules\gm_stringtables\gm_stringtables\main.cpp" />
+    <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_stringtables\gm_stringtables\main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
