--- a/trunk/gmcl_extras/gmcl_extras/gmcl_extras.vcxproj.filters
+++ b/trunk/gmcl_extras/gmcl_extras/gmcl_extras.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Jake%27s Stuff\GModModules\gmcl_extras\gmcl_extras\main.cpp">
+    <ClCompile Include="..\..\..\..\..\..\..\SourceSDK\gmod\CStateManager\CStateManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\..\..\SourceSDK\gmod\CStateManager\CStateManager.cpp">
+    <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gmcl_extras\gmcl_extras\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
