--- a/trunk/gm_concommand2/gm_concommand2/gm_concommand2.vcxproj
+++ b/trunk/gm_concommand2/gm_concommand2/gm_concommand2.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\..\..\SourceSDK\gmod\CStateManager\CStateManager.cpp" />
-    <ClCompile Include="..\..\..\..\Jake%27s Stuff\GModModules\gm_concommand2\gm_concommand2\main.cpp" />
+    <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_concommand2\gm_concommand2\main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EED54779-192B-4238-AED9-D4DE956C2F14}</ProjectGuid>
