--- a/gm_concommand2/gm_concommand2/gm_concommand2.vcxproj.filters
+++ b/gm_concommand2/gm_concommand2/gm_concommand2.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Jake%27s Stuff\GModModules\gm_concommand2\gm_concommand2\main.cpp">
+    <ClCompile Include="..\..\..\..\..\..\..\SourceSDK\gmod\CStateManager\CStateManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\..\..\SourceSDK\gmod\CStateManager\CStateManager.cpp">
+    <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_concommand2\gm_concommand2\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
