--- a/gm_stringtables/gm_stringtables/gm_stringtables.vcxproj
+++ b/gm_stringtables/gm_stringtables/gm_stringtables.vcxproj
@@ -74,8 +74,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\..\..\SourceSDK\gmod\CStateManager\CStateManager.cpp" />
     <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_stringtables\gm_stringtables\main.cpp" />
+    <ClCompile Include="..\..\..\..\SourceSDK\gmod\CStateManager\CEasyState.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
