--- a/trunk/gm_cvar3/gm_cvar3/gm_cvar3.vcxproj
+++ b/trunk/gm_cvar3/gm_cvar3/gm_cvar3.vcxproj
@@ -76,6 +76,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_cvar3\gm_cvar3\main.cpp" />
     <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_cvar3\gm_cvar3\sigscan.cpp" />
+    <ClCompile Include="..\..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaInterface.cpp" />
+    <ClCompile Include="..\..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaModuleManager.cpp" />
+    <ClCompile Include="..\..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_cvar3\gm_cvar3\sigscan.h" />
