--- a/gm_crc/gm_crc/gm_crc.vcxproj
+++ b/gm_crc/gm_crc/gm_crc.vcxproj
@@ -75,6 +75,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Jake%27s Stuff\MyModules\gm_crc\gm_crc\main.cpp" />
+    <ClCompile Include="..\..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaInterface.cpp" />
+    <ClCompile Include="..\..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaModuleManager.cpp" />
+    <ClCompile Include="..\..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaObject.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
