--- a/gmsv_gatekeeper/gmsv_gatekeeper.vcproj
+++ b/gmsv_gatekeeper/gmsv_gatekeeper.vcproj
@@ -21,6 +21,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
+			InheritedPropertySheets="..\SRCDS.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -96,6 +97,7 @@
 			OutputDirectory="$(SolutionDir)bin"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
+			InheritedPropertySheets="..\SRCDS.vsprops"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
@@ -181,6 +183,18 @@
 			>
 			<File
 				RelativePath=".\src\csteamid.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaInterface.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaModuleManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\SourceSDK\gmod13\include\GarrysMod\Lua\ILuaObject.cpp"
 				>
 			</File>
 			<File
