Fixed gatekeeper for windows.. no idea if this will end up fixing linux also

--- a/gmsv_gatekeeper/gmsv_gatekeeper.vcproj
+++ b/gmsv_gatekeeper/gmsv_gatekeeper.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="gmsv_gatekeeper"
+	Name="gmsv_gatekeeper_win32"
 	ProjectGUID="{C9A05F75-7C2F-4A9B-AE69-EF01C3A37BEB}"
 	RootNamespace="gmsv_gatekeeper"
 	Keyword="Win32Proj"
